--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "hide-secrets": "^2.0.0",
     "inquirer": "^8.2.4",
     "mysql2": "^3.6.2"
   }
