--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "figlet": "^1.7.0",
     "hide-secrets": "^2.0.0",
     "inquirer": "^8.2.4",
     "mysql2": "^3.6.2"
